--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.19.1",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
+    "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
